k8-one-pod-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-hello
spec:
  selector:
    matchLabels:
      run: node-hello
  replicas: 2
